updated asset dir path